# ETL-Engenharia-de-dados

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requiriment.txt
.github/workflows/: cd.yml  ci.yml
analytics/dbt/: .user.yml  dbt_project.yml  profiles.yml
analytics/dbt/models/: sources.yml
analytics/dbt/models/bronze/: bronze_lotofacil.sql
analytics/dbt/models/gold/: gold_lotofacil_concursos.sql  gold_lotofacil_resumo_anual.sql
analytics/dbt/models/silver/: silver_lotofacil.sql
analytics/dbt/tests/: gold_non_negative_values.sql
apps/api/: pyproject.toml
apps/api/src/potatocore/api/: main.py  schemas.py
apps/api/src/potatocore/api/routers/: gold.py  health.py
apps/api/src/potatocore/api/services/: gold_queries.py
apps/orchestrator/: pyproject.toml
apps/orchestrator/src/potatocore/orchestrator/dags/: etl_lotofacil.py
apps/orchestrator/src/potatocore/orchestrator/jobs/: api_smoke.py  dbt_runner.py  publish_api.py
dags/: extract_data.py
infra/docker/: compose.yml
infra/docker/airflow/: Dockerfile
infra/docker/api/: Dockerfile
infra/docker/dbt/: Dockerfile
libs/core/: pyproject.toml
libs/core/src/potatocore/core/: config.py  db.py  types.py
libs/ingestion/: pyproject.toml
libs/ingestion/src/potatocore/ingestion/: bronze_loader.py  excel_reader.py
tests/contract/: test_api_health.py
tests/integration/: test_dag_parse.py
tests/unit/: test_bronze_loader.py  test_excel_reader.py
