[project]
name = "potatocore-api"
version = "0.1.0"
description = "Gold serving API for PotatoCore"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.2",
  "potatocore-core",
  "psycopg2-binary>=2.9.9",
  "sqlalchemy>=1.4.36,<2.0",
  "uvicorn[standard]>=0.31.1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/potatocore"]
