[project]
name = "potatocore-core"
version = "0.1.0"
description = "Core shared utilities for PotatoCore platform"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "sqlalchemy>=1.4.36,<2.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/potatocore"]
